--- a/ColorIC Inspector.csproj
+++ b/ColorIC Inspector.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="Basler.Pylon.NET.x64" Version="10.3.2.636" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.3" />
+    <PackageReference Include="YamlDotNet" Version="16.3.0" />
     <!-- Nếu muốn dùng nuget managed wrapper, giữ package trên và REMOVE direct Reference -->
     <!-- Hoặc nếu bạn dùng Pylon SDK local, xóa package trên và dùng Reference bên dưới -->
   </ItemGroup>
@@ -32,6 +34,9 @@
     <PackageReference Include="OpenCvSharp4.Windows" Version="4.11.0.20250507" />
     <PackageReference Include="OpenCvSharp4.WpfExtensions" Version="4.11.0.20250507" />
   </ItemGroup>
+	<PropertyGroup>
+      <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    </PropertyGroup>
 
   <ItemGroup>
     <None Remove="icons8-chip-32.png" />
