--- a/ColorIC Inspector.csproj
+++ b/ColorIC Inspector.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Basler.Pylon.NET.x64" Version="10.3.2.636" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.3" />
+    <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.23.2" />
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
     <!-- Nếu muốn dùng nuget managed wrapper, giữ package trên và REMOVE direct Reference -->
     <!-- Hoặc nếu bạn dùng Pylon SDK local, xóa package trên và dùng Reference bên dưới -->
@@ -30,7 +31,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML.OnnxRuntime.Managed" Version="1.23.2" />
     <PackageReference Include="OpenCvSharp4.Windows" Version="4.11.0.20250507" />
     <PackageReference Include="OpenCvSharp4.WpfExtensions" Version="4.11.0.20250507" />
   </ItemGroup>
